fix align in Position

--- a/src/components/Position/position.module.css
+++ b/src/components/Position/position.module.css
@@ -102,6 +102,9 @@
   background-repeat: repeat-x;
   padding: 56px 16px;
   margin-bottom: 56px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .ctaText {
